moved tour editor into tab into a separete tour info view